# whiteboard-sib-access-plain-nota

./: COPYING  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
debian/: changelog  control  rules  whiteboard-sib-access-plain-nota.install
include/: Makefile.am  Makefile.in  serverthread.h  sib_access.h  sib_controller.h  sib_server.h  sib_service.h
src/: Makefile.am  Makefile.in  main.c  serverthread.c  sib_access.c  sib_controller.c  sib_server.c  sib_service.c
